src/renderer/formulaLanguageServer/.antlr/FeiyanFormulaParser.ts
// Generated from FeiyanFormulaParser.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from 'antlr4';
import FeiyanFormulaParserListener from './FeiyanFormulaParserListener';
import FeiyanFormulaParserVisitor from './FeiyanFormulaParserVisitor';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4.dfa.DFA(ds, index));

const sharedContextCache = new antlr4.PredictionContextCache();

export default class FeiyanFormulaParser extends antlr4.Parser {

	static grammarFileName = "FeiyanFormulaParser.g4";
	static literalNames = [null, null, null, null, null, null, null, null,
		null, null, "'alignas'", "'alignof'", "'asm'",
		"'auto'", "'bool'", "'break'", "'case'", "'catch'",
		"'char'", "'char16_t'", "'char32_t'", "'class'",
		"'const'", "'constexpr'", "'const_cast'", "'continue'",
		"'decltype'", "'default'", "'delete'", "'do'",
		"'double'", "'dynamic_cast'", "'else'", "'enum'",
		"'explicit'", "'export'", "'extern'", "'false'",
		"'final'", "'float'", "'for'", "'friend'", "'goto'",
		"'if'", "'inline'", "'int'", "'long'", "'mutable'",
		"'namespace'", "'new'", "'noexcept'", "'nullptr'",
		"'operator'", "'override'", "'private'", "'protected'",
		"'public'", "'register'", "'reinterpret_cast'",
		"'return'", "'short'", "'signed'", "'sizeof'",
		"'static'", "'static_assert'", "'static_cast'",
		"'struct'", "'switch'", "'template'", "'this'",
		"'thread_local'", "'throw'", "'true'", "'try'",
		"'typedef'", "'typeid'", "'typename'", "'union'",
		"'unsigned'", "'using'", "'virtual'", "'void'",
		"'volatile'", "'wchar_t'", "'while'", "'('",
		"')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'",
		"'*'", "'/'", "'%'", "'^'", "'&'", "'|'", "'~'",
		null, "'='", "'<'", "'>'", "'+='", "'-='", "'*='",
		"'/='", "'%='", "'^='", "'&='", "'|='", "'<<='",
		"'>>='", "'=='", "'!='", "'<='", "'>='", null,
		null, "'++'", "'--'", "','", "'->*'", "'->'",
		"'?'", "':'", "'::'", "';'", "'.'", "'.*'",
		"'...'"];
	static symbolicNames = [null, "IntegerLiteral", "CharacterLiteral",
		"FloatingLiteral", "StringLiteral", "BooleanLiteral",
		"PointerLiteral", "UserDefinedLiteral", "MultiLineMacro",
		"Directive", "Alignas", "Alignof", "Asm", "Auto",
		"Bool", "Break", "Case", "Catch", "Char", "Char16",
		"Char32", "Class", "Const", "Constexpr", "Const_cast",
		"Continue", "Decltype", "Default", "Delete",
		"Do", "Double", "Dynamic_cast", "Else", "Enum",
		"Explicit", "Export", "Extern", "False_", "Final",
		"Float", "For", "Friend", "Goto", "If", "Inline",
		"Int", "Long", "Mutable", "Namespace", "New",
		"Noexcept", "Nullptr", "Operator", "Override",
		"Private", "Protected", "Public", "Register",
		"Reinterpret_cast", "Return", "Short", "Signed",
		"Sizeof", "Static", "Static_assert", "Static_cast",
		"Struct", "Switch", "Template", "This", "Thread_local",
		"Throw", "True_", "Try", "Typedef", "Typeid_",
		"Typename_", "Union", "Unsigned", "Using",
		"Virtual", "Void", "Volatile", "Wchar", "While",
		"LeftParen", "RightParen", "LeftBracket", "RightBracket",
		"LeftBrace", "RightBrace", "Plus", "Minus",
		"Star", "Div", "Mod", "Caret", "And", "Or",
		"Tilde", "Not", "Assign", "Less", "Greater",
		"PlusAssign", "MinusAssign", "StarAssign",
		"DivAssign", "ModAssign", "XorAssign", "AndAssign",
		"OrAssign", "LeftShiftAssign", "RightShiftAssign",
		"Equal", "NotEqual", "LessEqual", "GreaterEqual",
		"AndAnd", "OrOr", "PlusPlus", "MinusMinus",
		"Comma", "ArrowStar", "Arrow", "Question",
		"Colon", "Doublecolon", "Semi", "Dot", "DotStar",
		"Ellipsis", "Identifier", "DecimalLiteral",
		"OctalLiteral", "HexadecimalLiteral", "BinaryLiteral",
		"Integersuffix", "UserDefinedIntegerLiteral",
		"UserDefinedFloatingLiteral", "UserDefinedStringLiteral",
		"UserDefinedCharacterLiteral", "Whitespace",
		"Newline", "BlockComment", "LineComment"];
	static ruleNames = ["formulaDefinition", "primaryExpression", "idExpression",
		"unqualifiedId", "qualifiedId", "nestedNameSpecifier",
		"lambdaExpression", "lambdaIntroducer", "lambdaCapture",
		"captureDefault", "captureList", "capture", "simpleCapture",
		"initcapture", "lambdaDeclarator", "postfixExpression",
		"expressionList", "unaryExpression", "unaryOperator",
		"newExpression", "newPlacement", "newTypeId", "newDeclarator",
		"noPointerNewDeclarator", "newInitializer", "castExpression",
		"pointerMemberExpression", "multiplicativeExpression",
		"additiveExpression", "shiftExpression", "shiftOperator",
		"relationalExpression", "equalityExpression", "andExpression",
		"exclusiveOrExpression", "inclusiveOrExpression",
		"logicalAndExpression", "logicalOrExpression",
		"conditionalExpression", "assignmentExpression",
		"assignmentOperator", "expression", "constantExpression",
		"statement", "labeledStatement", "expressionStatement",
		"compoundStatement", "statementSeq", "selectionStatement",
		"condition", "iterationStatement", "forInitStatement",
		"forRangeDeclaration", "forRangeInitializer", "jumpStatement",
		"declarationStatement", "blockDeclaration", "simpleDeclaration",
		"declSpecifier", "declSpecifierSeq", "functionSpecifier",
		"typedefName", "typeSpecifier", "trailingTypeSpecifier",
		"typeSpecifierSeq", "trailingTypeSpecifierSeq",
		"simpleTypeLengthModifier", "simpleTypeSignednessModifier",
		"simpleTypeSpecifier", "theTypeName", "decltypeSpecifier",
		"enumName", "enumSpecifier", "enumHead", "opaqueEnumDeclaration",
		"enumkey", "enumbase", "enumeratorList", "enumeratorDefinition",
		"enumerator", "namespaceName", "originalNamespaceName",
		"namespaceAlias", "attributeSpecifierSeq", "attributeSpecifier",
		"alignmentspecifier", "attributeList", "attribute",
		"attributeNamespace", "attributeArgumentClause",
		"balancedTokenSeq", "balancedtoken", "initDeclaratorList",
		"initDeclarator", "declarator", "pointerDeclarator",
		"noPointerDeclarator", "parametersAndQualifiers",
		"trailingReturnType", "pointerOperator", "cvqualifierseq",
		"cvQualifier", "refqualifier", "declaratorid",
		"theTypeId", "abstractDeclarator", "pointerAbstractDeclarator",
		"noPointerAbstractDeclarator", "abstractPackDeclarator",
		"noPointerAbstractPackDeclarator", "parameterDeclarationClause",
		"parameterDeclarationList", "parameterDeclaration",
		"initializer", "braceOrEqualInitializer", "initializerClause",
		"initializerList", "bracedInitList", "className",
		"operatorFunctionId", "literalOperatorId", "simpleTemplateId",
		"templateName", "templateArgumentList", "templateArgument",
		"throwExpression", "exceptionSpecification", "dynamicExceptionSpecification",
		"typeIdList", "noeExceptSpecification", "theOperator",
		"literal"];

	constructor(input) {
		super(input);
		this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
		this.ruleNames = FeiyanFormulaParser.ruleNames;
		this.literalNames = FeiyanFormulaParser.literalNames;
		this.symbolicNames = FeiyanFormulaParser.symbolicNames;
	}

	get atn() {
		return atn;
	}

	sempred(localctx, ruleIndex, predIndex) {
		switch (ruleIndex) {
			case 5:
				return this.nestedNameSpecifier_sempred(localctx, predIndex);
			case 15:
				return this.postfixExpression_sempred(localctx, predIndex);
			case 23:
				return this.noPointerNewDeclarator_sempred(localctx, predIndex);
			case 96:
				return this.noPointerDeclarator_sempred(localctx, predIndex);
			case 107:
				return this.noPointerAbstractDeclarator_sempred(localctx, predIndex);
			case 109:
				return this.noPointerAbstractPackDeclarator_sempred(localctx, predIndex);
			default:
				throw "No predicate with index:" + ruleIndex;
		}
	}

	nestedNameSpecifier_sempred(localctx, predIndex) {
		switch (predIndex) {
			case 0:
				return this.precpred(this._ctx, 1);
			default:
				throw "No predicate with index:" + predIndex;
		}
	};

	postfixExpression_sempred(localctx, predIndex) {
		switch (predIndex) {
			case 1:
				return this.precpred(this._ctx, 6);
			case 2:
				return this.precpred(this._ctx, 5);
			case 3:
				return this.precpred(this._ctx, 3);
			case 4:
				return this.precpred(this._ctx, 2);
			default:
				throw "No predicate with index:" + predIndex;
		}
	};

	noPointerNewDeclarator_sempred(localctx, predIndex) {
		switch (predIndex) {
			case 5:
				return this.precpred(this._ctx, 1);
			default:
				throw "No predicate with index:" + predIndex;
		}
	};

	noPointerDeclarator_sempred(localctx, predIndex) {
		switch (predIndex) {
			case 6:
				return this.precpred(this._ctx, 2);
			default:
				throw "No predicate with index:" + predIndex;
		}
	};

	noPointerAbstractDeclarator_sempred(localctx, predIndex) {
		switch (predIndex) {
			case 7:
				return this.precpred(this._ctx, 4);
			default:
				throw "No predicate with index:" + predIndex;
		}
	};

	noPointerAbstractPackDeclarator_sempred(localctx, predIndex) {
		switch (predIndex) {
			case 8:
				return this.precpred(this._ctx, 2);
			default:
				throw "No predicate with index:" + predIndex;
		}
	};




	formulaDefinition() {
		let localctx = new FormulaDefinitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, FeiyanFormulaParser.RULE_formulaDefinition);
		var _la = 0; // Token type
		try {
			this.enterOuterAlt(localctx, 1);
			this.state = 265;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << FeiyanFormulaParser.IntegerLiteral) | (1 << FeiyanFormulaParser.CharacterLiteral) | (1 << FeiyanFormulaParser.FloatingLiteral) | (1 << FeiyanFormulaParser.StringLiteral) | (1 << FeiyanFormulaParser.BooleanLiteral) | (1 << FeiyanFormulaParser.PointerLiteral) | (1 << FeiyanFormulaParser.UserDefinedLiteral) | (1 << FeiyanFormulaParser.Alignas) | (1 << FeiyanFormulaParser.Auto) | (1 << FeiyanFormulaParser.Bool) | (1 << FeiyanFormulaParser.Break) | (1 << FeiyanFormulaParser.Case) | (1 << FeiyanFormulaParser.Char) | (1 << FeiyanFormulaParser.Char16) | (1 << FeiyanFormulaParser.Char32) | (1 << FeiyanFormulaParser.Const) | (1 << FeiyanFormulaParser.Const_cast) | (1 << FeiyanFormulaParser.Continue) | (1 << FeiyanFormulaParser.Decltype) | (1 << FeiyanFormulaParser.Default) | (1 << FeiyanFormulaParser.Do) | (1 << FeiyanFormulaParser.Double) | (1 << FeiyanFormulaParser.Dynamic_cast))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (FeiyanFormulaParser.Enum - 33)) | (1 << (FeiyanFormulaParser.Explicit - 33)) | (1 << (FeiyanFormulaParser.Float - 33)) | (1 << (FeiyanFormulaParser.For - 33)) | (1 << (FeiyanFormulaParser.Goto - 33)) | (1 << (FeiyanFormulaParser.If - 33)) | (1 << (FeiyanFormulaParser.Inline - 33)) | (1 << (FeiyanFormulaParser.Int - 33)) | (1 << (FeiyanFormulaParser.Long - 33)) | (1 << (FeiyanFormulaParser.New - 33)) | (1 << (FeiyanFormulaParser.Operator - 33)) | (1 << (FeiyanFormulaParser.Reinterpret_cast - 33)) | (1 << (FeiyanFormulaParser.Return - 33)) | (1 << (FeiyanFormulaParser.Short - 33)) | (1 << (FeiyanFormulaParser.Signed - 33)))) !== 0) || ((((_la - 65)) & ~0x1f) == 0 && ((1 << (_la - 65)) & ((1 << (FeiyanFormulaParser.Static_cast - 65)) | (1 << (FeiyanFormulaParser.Switch - 65)) | (1 << (FeiyanFormulaParser.This - 65)) | (1 << (FeiyanFormulaParser.Throw - 65)) | (1 << (FeiyanFormulaParser.Unsigned - 65)) | (1 << (FeiyanFormulaParser.Virtual - 65)) | (1 << (FeiyanFormulaParser.Void - 65)) | (1 << (FeiyanFormulaParser.Volatile - 65)) | (1 << (FeiyanFormulaParser.Wchar - 65)) | (1 << (FeiyanFormulaParser.While - 65)) | (1 << (FeiyanFormulaParser.LeftParen - 65)) | (1 << (FeiyanFormulaParser.LeftBracket - 65)) | (1 << (FeiyanFormulaParser.LeftBrace - 65)) | (1 << (FeiyanFormulaParser.Plus - 65)) | (1 << (FeiyanFormulaParser.Minus - 65)) | (1 << (FeiyanFormulaParser.Star - 65)))) !== 0) || ((((_la - 97)) & ~0x1f) == 0 && ((1 << (_la - 97)) & ((1 << (FeiyanFormulaParser.And - 97)) | (1 << (FeiyanFormulaParser.Or - 97)) | (1 << (FeiyanFormulaParser.Tilde - 97)) | (1 << (FeiyanFormulaParser.Not - 97)) | (1 << (FeiyanFormulaParser.AndAnd - 97)) | (1 << (FeiyanFormulaParser.PlusPlus - 97)) | (1 << (FeiyanFormulaParser.MinusMinus - 97)) | (1 << (FeiyanFormulaParser.Doublecolon - 97)) | (1 << (FeiyanFormulaParser.Semi - 97)))) !== 0) || _la === FeiyanFormulaParser.Ellipsis || _la === FeiyanFormulaParser.Identifier) {
				this.state = 264;
				this.statementSeq();
			}

		} catch (re) {
			if (re instanceof antlr4.error.RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localctx;
	}



	primaryExpression() {
		let localctx = new PrimaryExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, FeiyanFormulaParser.RULE_primaryExpression);
		try {
			this.state = 279;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
				case FeiyanFormulaParser.IntegerLiteral:
				case FeiyanFormulaParser.CharacterLiteral:
				case FeiyanFormulaParser.FloatingLiteral:
				case FeiyanFormulaParser.StringLiteral:
				case FeiyanFormulaParser.BooleanLiteral:
				case FeiyanFormulaParser.PointerLiteral:
				case FeiyanFormulaParser.UserDefinedLiteral:
					this.enterOuterAlt(localctx, 1);
					this.state = 268;
					this._errHandler.sync(this);
					var _alt = 1;
					do {
						switch (_alt) {
							case 1:
								this.state = 267;
								this.literal();
								break;
							default:
								throw new antlr4.error.NoViableAltException(this);
						}
						this.state = 270;
						this._errHandler.sync(this);
						_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
					} while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
					break;
				case FeiyanFormulaParser.This:
					this.enterOuterAlt(localctx, 2);
					this.state = 272;
					this.match(FeiyanFormulaParser.This);
					break;
				case FeiyanFormulaParser.LeftParen:
					this.enterOuterAlt(localctx, 3);
					this.state = 273;
					this.match(FeiyanFormulaParser.LeftParen);
					this.state = 274;
					this.expression();
					this.state = 275;
					this.match(FeiyanFormulaParser.RightParen);
					break;
				case FeiyanFormulaParser.Decltype:
				case FeiyanFormulaParser.Operator:
				case FeiyanFormulaParser.Doublecolon:
				case FeiyanFormulaParser.Identifier:
					this.enterOuterAlt(localctx, 4);
					this.state = 277;
					this.idExpression();
					break;
				case FeiyanFormulaParser.LeftBracket:
					this.enterOuterAlt(localctx, 5);
					this.state = 278;
					this.lambdaExpression();
					break;
				default:
					throw new antlr4.error.NoViableAltException(this);
			}
		} catch (re) {
			if (re instanceof antlr4.error.RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localctx;
	}



	idExpression() {
		let localctx = new IdExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, FeiyanFormulaParser.RULE_idExpression);
		try {
			this.state = 283;
			this._errHandler.sync(this);
			var la_ = this._interp.adaptivePredict(this._input, 3, this._ctx);
			switch (la_) {
				case 1:
					this.enterOuterAlt(localctx, 1);
					this.state = 281;
					this.unqualifiedId();
					break;

				case 2:
					this.enterOuterAlt(localctx, 2);
					this.state = 282;
					this.qualifiedId();
					break;

			}
		} catch (re) {
			if (re instanceof antlr4.error.RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localctx;
	}



	unqualifiedId() {
		let localctx = new UnqualifiedIdContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, FeiyanFormulaParser.RULE_unqualifiedId);
		try {
			this.state = 288;
			this._errHandler.sync(this);
			var la_ = this._interp.adaptivePredict(this._input, 4, this._ctx);
			switch (la_) {
				case 1:
					this.enterOuterAlt(localctx, 1);
					this.state = 285;
					this.match(FeiyanFormulaParser.Identifier);
					break;

				case 2:
					this.enterOuterAlt(localctx, 2);
					this.state = 286;
					this.operatorFunctionId();
					break;

				case 3:
					this.enterOuterAlt(localctx, 3);
					this.state = 287;
					this.literalOperatorId();
					break;

			}
		} catch (re) {
			if (re instanceof antlr4.error.RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localctx;
	}



	qualifiedId() {
		let localctx = new QualifiedIdContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, FeiyanFormulaParser.RULE_qualifiedId);
		var _la = 0; // Token type
		try {
			this.enterOuterAlt(localctx, 1);
			this.state = 290;
			this.nestedNameSpecifier(0);
			this.state = 292;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FeiyanFormulaParser.Template) {
				this.state = 291;
				this.match(FeiyanFormulaParser.Template);
			}

			this.state = 294;
			this.unqualifiedId();
		} catch (re) {
			if (re instanceof antlr4.error.RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localctx;
	}


	nestedNameSpecifier(_p) {
		if (_p === undefined) {
			_p = 0;
		}
		const _parentctx = this._ctx;
		const _parentState = this.state;
		let localctx = new NestedNameSpecifierContext(this, this._ctx, _parentState);
		let _prevctx = localctx;
		const _startState = 10;
		this.enterRecursionRule(localctx, 10, FeiyanFormulaParser.RULE_nestedNameSpecifier, _p);
		var _la = 0; // Token type
		try {
			this.enterOuterAlt(localctx, 1);
			this.state = 300;
			this._errHandler.sync(this);
			var la_ = this._interp.adaptivePredict(this._input, 6, this._ctx);
			if (la_ === 1) {
				this.state = 297;
				this.theTypeName();

			} else if (la_ === 2) {
				this.state = 298;
				this.namespaceName();

			} else if (la_ === 3) {
				this.state = 299;
				this.decltypeSpecifier();
